# CosmicArchitect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: CMakeLists.txt  IExportable.hpp  Milestone.hpp  MilestoneTypes.hpp  SimulatedUniverse.cpp  SimulatedUniverse.hpp  Timeline.cpp  Timeline.hpp  Universe.cpp  Universe.hpp  UniverseDB.cpp  UniverseDB.hpp  UniverseParameters.hpp  UniverseValidator.hpp  main.cpp
backend/test_cmake/: CMakeLists.txt
backend/tests/: CMakeLists.txt  MilestoneTests.cpp  TimelineTest.cpp
frontend/: CMakeLists.txt
frontend/src/: main.cpp
frontend/ui/: app.js  index.html  styles.css
ui/: styles.css
